--- a/nx/myworkspace/package.json
+++ b/nx/myworkspace/package.json
@@ -50,7 +50,10 @@
     "@babel/core": "^7.4.3",
     "@nrwl/builders": "7.8.1",
     "@nrwl/schematics": "7.8.1",
+    "@storybook/addon-a11y": "^5.0.10",
+    "@storybook/addon-info": "^5.0.10",
     "@storybook/addon-jest": "^5.0.10",
+    "@storybook/addon-knobs": "^5.0.10",
     "@storybook/addon-storyshots": "^5.0.10",
     "@storybook/addon-storysource": "^5.0.10",
     "@storybook/angular": "^5.0.10",
