--- a/nx/myworkspace/package.json
+++ b/nx/myworkspace/package.json
@@ -54,6 +54,7 @@
     "@storybook/addon-info": "^5.0.10",
     "@storybook/addon-jest": "^5.0.10",
     "@storybook/addon-knobs": "^5.0.10",
+    "@storybook/addon-notes": "^5.0.10",
     "@storybook/addon-storyshots": "^5.0.10",
     "@storybook/addon-storysource": "^5.0.10",
     "@storybook/angular": "^5.0.10",
@@ -66,6 +67,7 @@
     "dotenv": "6.2.0",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
+    "markdown-loader": "^5.0.0",
     "prettier": "1.16.4",
     "storybook-addon-specifications": "^2.1.2",
     "ts-jest": "24.0.0",
