--- a/nx/myworkspace/package.json
+++ b/nx/myworkspace/package.json
@@ -57,6 +57,7 @@
     "@storybook/addon-notes": "^5.0.10",
     "@storybook/addon-storyshots": "^5.0.10",
     "@storybook/addon-storysource": "^5.0.10",
+    "@storybook/addon-viewport": "^5.0.10",
     "@storybook/angular": "^5.0.10",
     "@types/jest": "24.0.9",
     "@types/jquery": "3.3.6",
