--- a/nx/myworkspace/package.json
+++ b/nx/myworkspace/package.json
@@ -54,6 +54,7 @@
     "@storybook/addon-info": "^5.0.10",
     "@storybook/addon-jest": "^5.0.10",
     "@storybook/addon-knobs": "^5.0.10",
+    "@storybook/addon-links": "^5.0.10",
     "@storybook/addon-notes": "^5.0.10",
     "@storybook/addon-storyshots": "^5.0.10",
     "@storybook/addon-storysource": "^5.0.10",
