--- a/nx/myworkspace/package.json
+++ b/nx/myworkspace/package.json
@@ -48,6 +48,9 @@
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "^7.0.0",
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "@nrwl/builders": "7.8.1",
     "@nrwl/schematics": "7.8.1",
     "@storybook/addon-a11y": "^5.0.10",
@@ -71,6 +74,7 @@
     "jest-preset-angular": "7.0.0",
     "markdown-loader": "^5.0.0",
     "prettier": "1.16.4",
+    "react": "^16.8.6",
     "storybook-addon-specifications": "^2.1.2",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
