--- a/nx/myworkspace/package.json
+++ b/nx/myworkspace/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-react": "^7.0.0",
     "@nrwl/builders": "7.8.1",
     "@nrwl/schematics": "7.8.1",
+    "@sambego/storybook-styles": "^1.0.0",
     "@storybook/addon-a11y": "^5.0.10",
     "@storybook/addon-info": "^5.0.10",
     "@storybook/addon-jest": "^5.0.10",
@@ -67,6 +68,7 @@
     "@types/jquery": "3.3.6",
     "@types/node": "~8.9.4",
     "babel-loader": "^8.0.5",
+    "babel-plugin-file-loader": "^1.1.1",
     "codelyzer": "~4.5.0",
     "cypress": "3.1.0",
     "dotenv": "6.2.0",
