--- a/nx/myworkspace/package.json
+++ b/nx/myworkspace/package.json
@@ -25,7 +25,7 @@
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
     "help": "./node_modules/.bin/nx help",
-    "storybook": "start-storybook -c apps/storybook/.storybook",
+    "storybook": "start-storybook -s ./apps/storybook/assets -c apps/storybook/.storybook",
     "test:generate-output": "ng test ui --json --outputFile=apps/storybook/jest-test-results.json"
   },
   "private": true,
