--- a/nx/myworkspace/package.json
+++ b/nx/myworkspace/package.json
@@ -25,7 +25,7 @@
         "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
         "dep-graph": "./node_modules/.bin/nx dep-graph",
         "help": "./node_modules/.bin/nx help",
-        "storybook": "start-storybook -s ./apps/storybook/assets -c apps/storybook/.storybook",
+        "storybook": "start-storybook -s ./apps/storybook/src/assets -c apps/storybook/.storybook",
         "test:generate-output": "ng test ui --json --outputFile=apps/storybook/jest-test-results.json",
         "abstract:build-parser": "webpack --config apps/storybook/abstract/parser/webpack.config.js",
         "abstract:download-assets": "node apps/storybook/abstract/parser/bundle.js -s apps/storybook/src/stories -a apps/storybook/src/assets"
