--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "private": true,
     "dependencies": {
+        "@angular-devkit/schematics": "^9.0.3",
         "@angular/animations": "^7.0.0",
         "@angular/common": "^7.0.0",
         "@angular/compiler": "^7.0.0",
