--- a/package.json
+++ b/package.json
@@ -1,101 +1,102 @@
 {
-    "name": "myworkspace",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "./node_modules/.bin/nx lint && ng lint",
-        "e2e": "ng e2e",
-        "affected:apps": "./node_modules/.bin/nx affected:apps",
-        "affected:libs": "./node_modules/.bin/nx affected:libs",
-        "affected:build": "./node_modules/.bin/nx affected:build",
-        "affected:e2e": "./node_modules/.bin/nx affected:e2e",
-        "affected:test": "./node_modules/.bin/nx affected:test",
-        "affected:lint": "./node_modules/.bin/nx affected:lint",
-        "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
-        "affected": "./node_modules/.bin/nx affected",
-        "format": "./node_modules/.bin/nx format:write",
-        "format:write": "./node_modules/.bin/nx format:write",
-        "format:check": "./node_modules/.bin/nx format:check",
-        "update": "ng update @nrwl/schematics",
-        "update:check": "ng update",
-        "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
-        "dep-graph": "./node_modules/.bin/nx dep-graph",
-        "help": "./node_modules/.bin/nx help",
-        "storybook:generate-tests-output": "ng test ui --json --outputFile=storybook-temp/jest-test-results.json",
-        "storybook:generate-tests-output:watch": "npm run storybook:generate-tests-output -- --watch",
-        "storybook:dev": "start-storybook -s apps/storybook/src/assets -c apps/storybook/.storybook",
-        "storybook:deploy": "build-storybook -c apps/storybook/.storybook -s apps/storybook/src/assets -o .out",
-        "abstract:build-parser": "webpack --config apps/storybook/abstract/parser/webpack.config.js -o storybook-temp/abstract-parser.js",
-        "abstract:download-assets": "node storybook-temp/abstract-parser.js -s apps/storybook/src/stories -a apps/storybook/src/assets",
-        "storybook:full": ""
-    },
-    "private": true,
-    "dependencies": {
-        "@angular-devkit/schematics": "^9.0.3",
-        "@angular/animations": "^7.0.0",
-        "@angular/common": "^7.0.0",
-        "@angular/compiler": "^7.0.0",
-        "@angular/core": "^7.0.0",
-        "@angular/forms": "^7.0.0",
-        "@angular/platform-browser": "^7.0.0",
-        "@angular/platform-browser-dynamic": "^7.0.0",
-        "@angular/router": "^7.0.0",
-        "core-js": "^2.5.4",
-        "rxjs": "6.3.3",
-        "zone.js": "^0.8.26"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.13.0",
-        "@angular/cli": "7.3.1",
-        "@angular/language-service": "^7.0.0",
-        "@babel/core": "^7.4.3",
-        "@babel/plugin-proposal-class-properties": "^7.4.0",
-        "@babel/preset-env": "^7.4.3",
-        "@babel/preset-react": "^7.0.0",
-        "@babel/runtime": "^7.4.3",
-        "@nrwl/builders": "7.8.1",
-        "@nrwl/schematics": "7.8.1",
-        "@sambego/storybook-styles": "^1.0.0",
-        "@storybook/addon-a11y": "^5.0.10",
-        "@storybook/addon-info": "^5.0.10",
-        "@storybook/addon-jest": "^5.0.10",
-        "@storybook/addon-knobs": "^5.0.10",
-        "@storybook/addon-links": "^5.0.10",
-        "@storybook/addon-notes": "^5.0.10",
-        "@storybook/addon-storyshots": "^5.0.10",
-        "@storybook/addon-storysource": "^5.0.10",
-        "@storybook/addon-viewport": "^5.0.10",
-        "@storybook/angular": "^5.0.10",
-        "@types/jest": "24.0.9",
-        "@types/jquery": "3.3.6",
-        "@types/node": "~8.9.4",
-        "abstract-sdk": "^1.2.0",
-        "babel-loader": "^8.0.5",
-        "babel-plugin-file-loader": "^1.1.1",
-        "cli-progress": "^2.1.1",
-        "codelyzer": "~4.5.0",
-        "cypress": "3.1.0",
-        "dotenv": "6.2.0",
-        "glob": "^7.1.3",
-        "jest": "24.1.0",
-        "jest-preset-angular": "7.0.0",
-        "markdown-loader": "^5.0.0",
-        "minimist": "^1.2.0",
-        "prettier": "1.16.4",
-        "react": "^16.8.6",
-        "react-input-range": "^1.3.0",
-        "storybook-addon-specifications": "^2.1.2",
-        "ts-jest": "24.0.0",
-        "ts-node": "~7.0.0",
-        "tslint": "~5.11.0",
-        "typescript": "3.2.2",
-        "webpack": "^4.30.0",
-        "webpack-cli": "^3.3.1",
-        "webpack-dev-server": "^3.3.1",
-        "whatwg-fetch": "^2.0.4"
-    }
+  "name": "myworkspace",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "./node_modules/.bin/nx lint && ng lint",
+    "e2e": "ng e2e",
+    "affected:apps": "./node_modules/.bin/nx affected:apps",
+    "affected:libs": "./node_modules/.bin/nx affected:libs",
+    "affected:build": "./node_modules/.bin/nx affected:build",
+    "affected:e2e": "./node_modules/.bin/nx affected:e2e",
+    "affected:test": "./node_modules/.bin/nx affected:test",
+    "affected:lint": "./node_modules/.bin/nx affected:lint",
+    "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
+    "affected": "./node_modules/.bin/nx affected",
+    "format": "./node_modules/.bin/nx format:write",
+    "format:write": "./node_modules/.bin/nx format:write",
+    "format:check": "./node_modules/.bin/nx format:check",
+    "update": "ng update @nrwl/schematics",
+    "update:check": "ng update",
+    "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
+    "dep-graph": "./node_modules/.bin/nx dep-graph",
+    "help": "./node_modules/.bin/nx help",
+    "storybook:generate-tests-output": "ng test ui --json --outputFile=storybook-temp/jest-test-results.json",
+    "storybook:generate-tests-output:watch": "npm run storybook:generate-tests-output -- --watch",
+    "storybook:dev": "start-storybook -s apps/storybook/src/assets -c apps/storybook/.storybook",
+    "storybook:deploy": "build-storybook -c apps/storybook/.storybook -s apps/storybook/src/assets -o .out",
+    "abstract:build-parser": "webpack --config apps/storybook/abstract/parser/webpack.config.js -o storybook-temp/abstract-parser.js",
+    "abstract:download-assets": "node storybook-temp/abstract-parser.js -s apps/storybook/src/stories -a apps/storybook/src/assets",
+    "storybook:full": ""
+  },
+  "private": true,
+  "dependencies": {
+    "@angular-devkit/schematics": "^9.0.3",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "core-js": "^2.5.4",
+    "rxjs": "6.5.4",
+    "zone.js": "~0.9.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.25",
+    "@angular/cli": "8.3.25",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.3",
+    "@nrwl/builders": "7.8.1",
+    "@nrwl/schematics": "7.8.1",
+    "@sambego/storybook-styles": "^1.0.0",
+    "@storybook/addon-a11y": "^5.0.10",
+    "@storybook/addon-info": "^5.0.10",
+    "@storybook/addon-jest": "^5.0.10",
+    "@storybook/addon-knobs": "^5.0.10",
+    "@storybook/addon-links": "^5.0.10",
+    "@storybook/addon-notes": "^5.0.10",
+    "@storybook/addon-storyshots": "^5.0.10",
+    "@storybook/addon-storysource": "^5.0.10",
+    "@storybook/addon-viewport": "^5.0.10",
+    "@storybook/angular": "^5.0.10",
+    "@types/jest": "24.0.9",
+    "@types/jquery": "3.3.6",
+    "@types/node": "~8.9.4",
+    "abstract-sdk": "^1.2.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-file-loader": "^1.1.1",
+    "cli-progress": "^2.1.1",
+    "codelyzer": "^5.0.1",
+    "cypress": "3.1.0",
+    "dotenv": "6.2.0",
+    "glob": "^7.1.3",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
+    "markdown-loader": "^5.0.0",
+    "minimist": "^1.2.0",
+    "prettier": "1.16.4",
+    "react": "^16.8.6",
+    "react-input-range": "^1.3.0",
+    "storybook-addon-specifications": "^2.1.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "3.5.3",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1",
+    "whatwg-fetch": "^2.0.4"
+  }
 }
