--- a/package.json
+++ b/package.json
@@ -36,23 +36,24 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^9.0.3",
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/animations": "^9.0.2",
+    "@angular/common": "^9.0.2",
+    "@angular/compiler": "^9.0.2",
+    "@angular/core": "^9.0.2",
+    "@angular/forms": "^9.0.2",
+    "@angular/platform-browser": "^9.0.2",
+    "@angular/platform-browser-dynamic": "^9.0.2",
+    "@angular/router": "^9.0.2",
     "core-js": "^2.5.4",
     "rxjs": "6.5.4",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/cli": "8.3.25",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.900.3",
+    "@angular/cli": "9.0.3",
+    "@angular/compiler-cli": "^9.0.2",
+    "@angular/language-service": "^9.0.2",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
@@ -73,12 +74,12 @@
     "@storybook/angular": "^5.0.10",
     "@types/jest": "24.0.9",
     "@types/jquery": "3.3.6",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "abstract-sdk": "^1.2.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-file-loader": "^1.1.1",
     "cli-progress": "^2.1.1",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.2",
     "cypress": "3.1.0",
     "dotenv": "6.2.0",
     "glob": "^7.1.3",
@@ -93,7 +94,7 @@
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "3.5.3",
+    "typescript": "3.7.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1",
