--- a/apps/myworkspace/tsconfig.app.json
+++ b/apps/myworkspace/tsconfig.app.json
@@ -1,12 +1,9 @@
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../../dist/out-tsc/apps/myworkspace",
-    "types": []
-  },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": ["**/*.d.ts"]
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "outDir": "../../dist/out-tsc",
+        "types": []
+    },
+    "files": ["src/main.ts", "src/polyfills.ts"],
+    "include": ["**/*.d.ts"]
 }
