--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "format": "./node_modules/.bin/nx format:write",
     "format:write": "./node_modules/.bin/nx format:write",
     "format:check": "./node_modules/.bin/nx format:check",
-    "update": "ng update @nrwl/schematics",
+    "update": "ng update @nrwl/workspace",
     "update:check": "ng update",
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
@@ -47,7 +47,8 @@
     "core-js": "^2.5.4",
     "rxjs": "6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@nrwl/angular": "8.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
@@ -59,8 +60,9 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.3",
-    "@nrwl/builders": "7.8.1",
-    "@nrwl/schematics": "7.8.1",
+    "@nrwl/cypress": "8.0.0",
+    "@nrwl/jest": "8.0.0",
+    "@nrwl/workspace": "8.0.0",
     "@sambego/storybook-styles": "^1.0.0",
     "@storybook/addon-a11y": "^5.0.10",
     "@storybook/addon-info": "^5.0.10",
@@ -71,7 +73,7 @@
     "@storybook/addon-storyshots": "^5.0.10",
     "@storybook/addon-storysource": "^5.0.10",
     "@storybook/addon-viewport": "^5.0.10",
-    "@storybook/angular": "^5.0.10",
+    "@storybook/angular": "^5.3.14",
     "@types/jest": "24.0.9",
     "@types/jquery": "3.3.6",
     "@types/node": "^12.11.1",
